# vision-ovn

./: CMakeLists.txt  package.xml  test  test.cpp  vision_yolo_node.cpp
model/: best-416.xml  bestt.xml
src/: main.cpp  main_backup2.cpp  main_backup_20260109_211723.cpp  main_complex_backup copy.cpp  main_complex_backup.cpp  main_fixed.cpp  main_old_20260109_211404.cpp  mainbackup.cpp  mama.cpp  yolo_onnx.cpp  yolo_onnx.hpp  yolo_onnx_backup.cpp  yolo_onnx_backup.hpp  yolo_openvino.cpp  yolo_openvino.hpp
